# Gonana-Concordium-Smart-Contract

./: .env.local  .gitignore  Cargo.toml  Documentation.md  cancel_product.json  gonana_marketplace.wasm.v1  list_product.json  place_order.json
deploy-scripts/: Cargo.toml
deploy-scripts/src/: main.rs  sponsored.rs  token.rs
gona-token/: Cargo.toml
gona-token/src/: lib.rs
gona-token/tests/: tests.rs
server/: Cargo.toml
server/key/: 3UsPQ4MxhGNLEbYac53H7C2JHzE3Xe41zrgCdLVrp5vphx4YSe.export
server/src/: main.rs
server/src/handlers/: api.rs  errors.rs  mod.rs  types.rs
src/: lib.rs  mod.rs
tests/: tests.rs
