# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[package]
name = "gonana_concordium_smart_contract"
version = "0.1.0"
edition = "2021"
license = "MPL-2.0"
authors = [ "timadigwe <timothyadigwe2019@gmail.com>" ]
description = "Gonana marketplace smart-contract on concordium blockchain"

[features]
default = ["std"]
std = ["concordium-std/std"]
wee_alloc = ["concordium-std/wee_alloc"]

[dependencies]
concordium-std = {version = "8.1", default-features = false}
rand = { version = "0.8.5" }
getrandom = { version = "0.2.11", features = ["js"] }

[dev-dependencies]
concordium-smart-contract-testing = "3"

[lib]
crate-type=["cdylib", "rlib"]

[profile.release]
opt-level = "s"
codegen-units = 1
